プラクティスのページ内リンク、上に戻るリンク設置

--- a/app/assets/stylesheets/blocks/_categories.sass
+++ b/app/assets/stylesheets/blocks/_categories.sass
@@ -4,8 +4,12 @@
   width: 100%
 
 .categories-items
-  max-width: 50rem
+  max-width: 68rem
   +margin(horizontal, auto)
+  padding-right: 18rem
+  +position(relative)
+  +media-breakpoint-down(sm)
+    padding-right: 0
 
 .categories-item
   margin-bottom: 3rem
