--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -16,7 +16,7 @@ html.is-application lang="ja"
       var signed_in = #{current_user ? true : false}
     - if head_last = yield(:head_last)
       = head_last
-  body class="#{body_class} #{yield(:page_classes)}"
+  body(class="#{body_class} #{yield(:page_classes)}" id ="body")
     - unless yield(:page_classes).include?('no-global-nav')
       = render 'global_nav'
     .wrapper.js-open-drawer-wrapper
@@ -27,3 +27,8 @@ html.is-application lang="ja"
         = yield
     - unless yield(:page_classes).include?('no-recent-reports')
       = render 'reports/recent_reports'
+    .to-top.js-to-top
+      .container
+        .to-top__container
+          a.to-top__link(data-scroll href= "#body")
+            i.fa.fa-arrow-up
