--- a/app/views/feeds/index.html.slim
+++ b/app/views/feeds/index.html.slim
@@ -15,9 +15,11 @@ header.page-header
               = entry.title
             ul.entry-header__meta-items
               li.entry-header__meta-item.is-published
-                | published at #{entry.published}
+                = l entry.published, format: :semi_long
               - if entry.author
-                li.entry-header__meta-item.is-author posted by #{entry.author}
+                li.entry-header__meta-item.is-author
+                  | posted by #{entry.author}
+                  //= gravatar_tag entry.author, size: 44, html: { class: "report-list-item__author-icon"}
         .entry-body
           - if entry.content.nil?
             .is-long-text-style= raw entry.summary
