プラクティスのページ内リンク、上に戻るリンク設置

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -15,7 +15,7 @@ html.is-application lang="ja"
     javascript:
     - if head_last = yield(:head_last)
       = head_last
-  body class="#{body_class} #{yield(:page_classes)}"
+  body(class="#{body_class} #{yield(:page_classes)}" id ="body")
     - unless yield(:page_classes).include?('no-global-nav')
       = render 'global_nav'
     .wrapper.js-open-drawer-wrapper
@@ -31,3 +31,8 @@ html.is-application lang="ja"
             - @reports.each do |report|
               - if report.present?
                 = render 'reports/recent_reports', report: report
+    .to-top.js-to-top
+      .container
+        .to-top__container
+          a.to-top__link(data-scroll href= "#body")
+            i.fa.fa-arrow-up
