スマホ対応

--- a/app/assets/stylesheets/blocks/_admin-categories.sass
+++ b/app/assets/stylesheets/blocks/_admin-categories.sass
@@ -1,4 +1,9 @@
 .admin-table
+  +media-breakpoint-down(sm)
+    +overflow(auto hidden)
+    margin-bottom: 1.5rem
+
+.admin-table__table
   box-shadow: rgba(black, .2) 0 .0625rem .125rem
   border-radius: .25rem
   width: 100%
