--- a/app/assets/stylesheets/blocks/_form.sass
+++ b/app/assets/stylesheets/blocks/_form.sass
@@ -18,7 +18,8 @@
   +media-breakpoint-down(sm)
     width: 100%
     +padding(horizontal, 0)
-    &:nth-child(2)
+    &:nth-child(2),
+    &:nth-child(3)    
       margin-top: .75rem
     > *
       width: 100%
