--- a/app/assets/stylesheets/blocks/_page-header.sass
+++ b/app/assets/stylesheets/blocks/_page-header.sass
@@ -2,6 +2,8 @@
   background-color: $base-color
   margin-bottom: 1.5rem
   box-shadow: rgba(black, .2) 0 .0625rem .0625rem
+  +media-breakpoint-down(sm)
+    margin-bottom: 1rem
   &.has-border-bottom-none
     border-bottom: none
 .page-header__container
