--- a/app/assets/stylesheets/blocks/_practices-edit.sass
+++ b/app/assets/stylesheets/blocks/_practices-edit.sass
@@ -1,5 +1,8 @@
 .practices-edit__input
   min-height: 22rem
+  +media-breakpoint-down(sm)
+    margin-bottom: 1rem
+
 .practices-edit__preview
   background-color: $base-color
   padding: .5rem
