--- a/app/assets/stylesheets/blocks/header/_header.sass
+++ b/app/assets/stylesheets/blocks/header/_header.sass
@@ -11,6 +11,8 @@ $header-height: 3.125rem
 
 .header__logo
   height: 1.5rem
+  +media-breakpoint-down(sm)
+    height: 1.25rem
 
 .header-links
   height: 100%
