--- a/app/assets/stylesheets/blocks/report/_report-practices.sass
+++ b/app/assets/stylesheets/blocks/report/_report-practices.sass
@@ -1,5 +1,7 @@
 .report-practices
   padding: 1.25rem 2rem 0
+  +media-breakpoint-down(sm)
+    padding: 1rem 1rem 0
 .report-practices__items
   display: flex
   flex-wrap: wrap
