--- a/app/assets/stylesheets/blocks/report/_report.sass
+++ b/app/assets/stylesheets/blocks/report/_report.sass
@@ -70,6 +70,8 @@ $report-header-author: 6rem
   justify-content: space-between
   align-items: center
   height: 3.75rem
+  +media-breakpoint-down(sm)
+    +padding(horizontal, 1rem)
 .report__actions-items
   display: flex
   align-items: center
