--- a/app/assets/stylesheets/blocks/_page-list-item.sass
+++ b/app/assets/stylesheets/blocks/_page-list-item.sass
@@ -21,6 +21,8 @@
 .page-list-item__actions
   margin-left: .5rem
   display: flex
+  +media-breakpoint-down(sm)
+    margin-left: 0
 .page-list-item__actions-link
   +text-block(1rem 1, flex #b9b9b9)
   align-items: center
