--- a/app/assets/stylesheets/blocks/report/_select-practices.sass
+++ b/app/assets/stylesheets/blocks/report/_select-practices.sass
@@ -10,6 +10,9 @@
   border-bottom: solid .0625rem $background-color-shade
   background-color: #f7f7f7
   transition: color .2s ease-in, background-color .2s ease-in
+  +media-breakpoint-down(sm)
+    +position(relative)
+    padding-left: 2.25rem
   &:last-child
     border-bottom: none
   &:hover
@@ -21,3 +24,5 @@
 
 .select-practices__input
   margin-right: .5rem
+  +media-breakpoint-down(sm)
+    +position(absolute, left .75rem, top .75rem)
