--- a/app/assets/stylesheets/blocks/shared/_sort-nav.sass
+++ b/app/assets/stylesheets/blocks/shared/_sort-nav.sass
@@ -12,6 +12,7 @@
   +text-block(.8125rem 1.45)
   margin-right: .5rem
   +media-breakpoint-down(sm)
+    margin-right: 0
     margin-bottom: .25rem
 .sort-nav__select
   +media-breakpoint-down(sm)
