--- a/app/assets/stylesheets/blocks/shared/_tab-nav.sass
+++ b/app/assets/stylesheets/blocks/shared/_tab-nav.sass
@@ -1,17 +1,18 @@
 .tab-nav
-  +padding(vertical, .75rem)
   margin-bottom: 1.5rem
   border-bottom: solid .0625rem $background-color-shade
 .tab-nav__items
   display: flex
+  +padding(vertical, .75rem)
   overflow-x: auto
   overflow-y: hidden
 .tab-nav__item
   margin-right: .375rem
-  &:last-child
-    margin-right: 0
   +media-breakpoint-down(sm)
-    margin-right: 0
+    +margin(horizontal, .25rem)
+  &:last-child
+    +media-breakpoint-up(md)
+      margin-right: 0
 .tab-nav__item-link
   +block-link
   +text-block(.75rem 2.3, $muted-text center)
