--- a/app/assets/stylesheets/blocks/user/_users.sass
+++ b/app/assets/stylesheets/blocks/user/_users.sass
@@ -10,6 +10,8 @@
   +position(relative)
   padding-left: 3.5rem
   border-bottom: solid .0625rem $background-color
+  +media-breakpoint-down(sm)
+    padding-left: 3rem
 .users-item__name-link
   +text-block(1rem 1.45, 600 $main-color block)
   +padding(vertical, .5rem)
@@ -17,14 +19,22 @@
 .users-item__icon-image
   border-radius: 50%
   +position(absolute, left -1rem, top -.375rem)
-  +size(64px)
+  +size(4rem)
   border: solid $base-color .25rem
   background-color: white
+  +media-breakpoint-down(sm)
+    +size(3rem)
+    +position(absolute, left -.5rem, top -.25rem)
+    border: solid $base-color .125rem
+
 .users-item__description
   padding: .5rem 1rem .75rem
   padding-left: 3.5rem
+  +media-breakpoint-down(sm)
+    padding-left: 1rem
   p
     +text-block(.75rem 1.6)
+
 .users-item__edit
   text-align: center
   margin-top: -.25rem
