--- a/app/assets/stylesheets/settings/helpers/long-text.sass
+++ b/app/assets/stylesheets/settings/helpers/long-text.sass
@@ -1,12 +1,22 @@
 .is-long-text-style
+  +media-breakpoint-down(sm)
+    word-break: break-all
   h1
     +text-block(1.6em 1.4 .6em)
+    +media-breakpoint-down(sm)
+      +text-block(1.25em 1.4 .6em)
   h2
     +text-block(1.4em 1.4 .6em)
+    +media-breakpoint-down(sm)
+      +text-block(1.125em 1.4 .6em)
   h3
     +text-block(1.2em 1.4 .6em)
+    +media-breakpoint-down(sm)
+      +text-block(1em 1.4 .6em)
   p
     +text-block(.9375rem 2 1.4em)
+    +media-breakpoint-down(sm)
+      +text-block(.875rem 1.9 1em)
   a
     +default-link
     +hover-link-reversal
@@ -28,12 +38,20 @@
     list-style: disc outside
   li
     +text-block(.9375rem 1.6 .8em)
+    +media-breakpoint-down(sm)
+      +text-block(.875rem 1.6 .6em)
   pre
     margin-bottom: 2rem
     code
       +text-block(.8125rem 1.6)
       padding: .5rem .75rem
       border: solid .0625rem #d9d9d9
+  p
+    code
+      +text-block(.8125rem 1.6)
+      padding: .125rem .25rem
+      border: solid .0625rem #d9d9d9
+      background-color: #f8f8f8
   .twitter-tweet
     +margin(horizontal, auto)
     margin-bottom: 2.5rem !important
