--- a/app/views/admin/users/index.html.slim
+++ b/app/views/admin/users/index.html.slim
@@ -5,56 +5,57 @@ header.page-header
       h2.page-header__title
         = t('interns')
 .page-body
-  .container
-    table.admin-table
-      thead.admin-table__header
-        tr.admin-table__labels
-          th.admin-table__label
-            | ユーザー名
-          th.admin-table__label
-            | SNS
-          th.admin-table__label
-            | 就職支援
-          th.admin-table__label
-            | 操作
-      tbody.admin-table__items
-        - @users.each do |user|
-          tr.admin-table__item
-            td.admin-table__item-value
-              .user-part(class="is-#{user.part}")
-                = t(user.part)
-              = link_to admin_user_path(user), class: "admin-table__user" do
-                = gravatar_tag user, html: { class: "admin-table__user-icon" }
-                span.admin-table__user-login-name
-                  = user.login_name
-                  | （#{user.full_name}）
-            td.admin-table__item-value.is-text-align-center
-              ul.is-button-group
-                - if user.github_account?
-                  li
-                    = link_to user_github_url(user), class: 'is-button-standard-sm-secondary is-icon' do
-                      i.fa.fa-github-alt
-                - if user.twitter_url?
-                  li
-                    = link_to 'https://twitter.com/' + user.twitter_id, class: 'is-button-standard-sm-secondary is-icon' do
-                      i.fa.fa-twitter
-                - if user.facebook_url?
-                  li
-                    = link_to user.facebook_url, class: 'is-button-standard-sm-secondary is-icon' do
-                      i.fa.fa-facebook
-                - if user.blog_url?
-                  li
-                    = link_to user.blog_url, class: 'is-button-standard-sm-secondary is-icon' do
-                      i.fa.fa-home
-                  - if user.feed_url?
+  .container.is-padding-horizontal-0-sm-down
+    .admin-table
+      table.admin-table__table
+        thead.admin-table__header
+          tr.admin-table__labels
+            th.admin-table__label
+              | ユーザー名
+            th.admin-table__label
+              | SNS
+            th.admin-table__label
+              | 就職支援
+            th.admin-table__label
+              | 操作
+        tbody.admin-table__items
+          - @users.each do |user|
+            tr.admin-table__item
+              td.admin-table__item-value
+                .user-part(class="is-#{user.part}")
+                  = t(user.part)
+                = link_to admin_user_path(user), class: "admin-table__user" do
+                  = gravatar_tag user, html: { class: "admin-table__user-icon" }
+                  span.admin-table__user-login-name
+                    = user.login_name
+                    | （#{user.full_name}）
+              td.admin-table__item-value.is-text-align-center
+                ul.is-button-group
+                  - if user.github_account?
                     li
-                      = link_to user.feed_url, class: 'is-button-standard-sm-secondary is-icon' do
-                        i.fa.fa-rss
-            td.admin-table__item-value.is-text-align-center
-              - if user.find_job_assist
-                i.fa.fa-circle-o
-              - else
-                i.fa.fa-times
-            td.admin-table__item-value.is-text-align-center
-              = link_to edit_admin_user_path(user), class: 'is-button-standard-sm-warning is-icon' do
-                i.fa.fa-pencil
+                      = link_to user_github_url(user), class: 'is-button-standard-sm-secondary is-icon' do
+                        i.fa.fa-github-alt
+                  - if user.twitter_url?
+                    li
+                      = link_to 'https://twitter.com/' + user.twitter_id, class: 'is-button-standard-sm-secondary is-icon' do
+                        i.fa.fa-twitter
+                  - if user.facebook_url?
+                    li
+                      = link_to user.facebook_url, class: 'is-button-standard-sm-secondary is-icon' do
+                        i.fa.fa-facebook
+                  - if user.blog_url?
+                    li
+                      = link_to user.blog_url, class: 'is-button-standard-sm-secondary is-icon' do
+                        i.fa.fa-home
+                    - if user.feed_url?
+                      li
+                        = link_to user.feed_url, class: 'is-button-standard-sm-secondary is-icon' do
+                          i.fa.fa-rss
+              td.admin-table__item-value.is-text-align-center
+                - if user.find_job_assist
+                  i.fa.fa-circle-o
+                - else
+                  i.fa.fa-times
+              td.admin-table__item-value.is-text-align-center
+                = link_to edit_admin_user_path(user), class: 'is-button-standard-sm-warning is-icon' do
+                  i.fa.fa-pencil
