--- a/app/views/reports/index.html.slim
+++ b/app/views/reports/index.html.slim
@@ -38,5 +38,5 @@
                   = link_to t('destroy'), report_path(report), data: { confirm: t('are_you_sure') }, method: :delete, class: 'btn btn-danger'
             - if @search_word.present?
               .report__body
-                = highlight("#{slice_description(report)}", "#{@search_word}")
+                = highlight("#{sliced(report.description, @search_word)}", "#{@search_word}")
       = paginate @reports
