--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -25,12 +25,12 @@ html.is-application lang="ja"
       main.page
         = yield
     - unless yield(:page_classes).include?('no-recent-reports')
-      - if @reports.nil? == false
+      = recent_reports
+      - if @reports.present?
         .recent-reports
           .recent-reports__items
             - @reports.each do |report|
-              - if report.present?
-                = render 'reports/recent_reports', report: report
+              = render 'reports/recent_reports', report: report
     .to-top.js-to-top
       .container
         .to-top__container
