--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -15,8 +15,7 @@
         .form-actions.is-margin-bottom-0
           ul.form-actions__items
             li.form-actions__item
-              // TODO 仮URL
-              = link_to '/contacts/new', class: "is-button-standard-xl-warning is-block" do
+              = link_to new_contacts_url, class: "is-button-standard-xl-warning is-block" do
                 i.fa.fa-envelope-o
                 | 申込みはこちらから
 
