[WIP]検索機能の実装

--- a/app/views/application/_header.html.slim
+++ b/app/views/application/_header.html.slim
@@ -11,21 +11,16 @@ header.header
                 = text_field_tag 'word', @word, class: 'a-xs-text-input header-search__text-input' , placeholder: t('search_report')
                 button.is-button-standard-sm-secondary.is-icon.header-search__submit(type= 'submit')
                   i.fa.fa-search
-            li.header-links__item.js-drop-down
-              .header-links__link.js-drop-down__trigger
-                i.fa.fa-bell-o
-              .header-drop-down.js-drop-down__target
-                ul.header-drop-down__items
-                  li.header-drop-down__item
-                    a.header-drop-down__item-link href="#"
-                      | Action
-                  li.header-drop-down__item
-                    a.header-drop-down__item-link href="#"
-                      | Another action
-                  li.header-drop-down__item
-                    a.header-drop-down__item-link href="#"
-                      | Something else here
-                .header-drop-down__overlay.js-drop-down__trigger
+            = recent_comments
+            - if @activities.present?
+              li.header-links__item.js-drop-down
+                .header-links__link.js-drop-down__trigger
+                  i.fa.fa-bell-o
+                .header-drop-down.js-drop-down__target
+                  ul.header-drop-down__items
+                    - @activities.each do |activity|
+                      = render_activity(activity)
+                  .header-drop-down__overlay.js-drop-down__trigger
             li.header-links__item
               = link_to edit_user_path(current_user), class: "header-links__link" do
                 i.fa.fa-cog
