--- a/app/assets/stylesheets/blocks/header/_header-drop-down.sass
+++ b/app/assets/stylesheets/blocks/header/_header-drop-down.sass
@@ -28,3 +28,12 @@
 
 .header-drop-down__overlay
   +position(fixed, left 0, top 0, right 0, bottom 0)
+
+.unread-notification
+  color: white
+  background-color: red
+  height: 25px
+  width: 20px
+  text-align: center
+  +position(absolute, left 60%, top 2px)
+  +border-radius(3px)
