--- a/app/views/layouts/admin.html.slim
+++ b/app/views/layouts/admin.html.slim
@@ -27,7 +27,7 @@ html.is-admin lang="ja"
         = yield
         //= render 'active_users'
     - unless yield(:page_classes).include?('no-recent-reports')
-      = recent_reports
+      - recent_reports
       - if @reports.present?
         .recent-reports
           .recent-reports__items
