fix recent comments & reports

--- a/app/views/application/_header.html.slim
+++ b/app/views/application/_header.html.slim
@@ -11,18 +11,17 @@ header.header
                 = text_field_tag 'word', @word, class: 'a-xs-text-input header-search__text-input' , placeholder: t('search_report')
                 button.is-button-standard-sm-secondary.is-icon.header-search__submit(type= 'submit')
                   i.fa.fa-search
-            - recent_comments
-            - if @activities.present?
+            - if recent_comments.present?
               li.header-links__item.js-drop-down
                 .header-links__link.js-drop-down__trigger
                   i.fa.fa-bell-o
                 .header-drop-down.js-drop-down__target
                   ul.header-drop-down__items
-                    - @activities.each do |activity|
+                    - recent_comments.each do |activity|
                       = render_activity(activity)
                   .header-drop-down__overlay.js-drop-down__trigger
                 span.unread-notification
-                  = @activities.count
+                  = recent_comments.count
             li.header-links__item
               = link_to edit_user_path(current_user), class: "header-links__link" do
                 i.fa.fa-cog
