--- a/app/views/layouts/admin.html.slim
+++ b/app/views/layouts/admin.html.slim
@@ -27,9 +27,8 @@ html.is-admin lang="ja"
         = yield
         //= render 'active_users'
     - unless yield(:page_classes).include?('no-recent-reports')
-      - recent_reports
-      - if @reports.present?
+      - if recent_reports.present?
         .recent-reports
           .recent-reports__items
-            - @reports.each do |report|
+            - recent_reports.each do |report|
               = render 'reports/recent_reports', report: report
