--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -26,11 +26,10 @@ html.is-application lang="ja"
       main.page
         = yield
     - unless yield(:page_classes).include?('no-recent-reports')
-      - recent_reports
-      - if @reports.present?
+      - if recent_reports.present?
         .recent-reports
           .recent-reports__items
-            - @reports.each do |report|
+            - recent_reports.each do |report|
               = render 'reports/recent_reports', report: report
     .to-top.js-to-top
       .container
