--- a/app/views/notice_mailer/contact_email.text.erb
+++ b/app/views/notice_mailer/contact_email.text.erb
@@ -46,7 +46,11 @@
 【Githubアカウント】
 <%= @contact.github_account %>
 
-【志望利用】
+【志望理由】
 <%= @contact.application_reason %>
+
+【目的】
+<%= @contact.purpose_deadline.strftime('%Y年%m月') %>頃までに
+<%= @contact.purpose_content %>
 
 ------------------------------------------------------------
