divide into 2 select tag

--- a/app/views/notice_mailer/contact_email.text.erb
+++ b/app/views/notice_mailer/contact_email.text.erb
@@ -50,7 +50,7 @@
 <%= @contact.application_reason %>
 
 【目的】
-<%= @contact.purpose_deadline.strftime('%Y年%m月') %>頃までに
+<%= @contact.purpose_deadline_year %>年<%= @contact.purpose_deadline_month %>頃までに
 <%= @contact.purpose_content %>
 
 ------------------------------------------------------------
