masterをrebase、コンフリクトを解消

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -11,13 +11,18 @@
 // oulu-functions-after-variables (functions need variables)
 @import oulu-functions-after-variables
 
+@import settings/custom-bootstrap/variables
+@import bootstrap/variables
+
+$line-height: 1.4
+
 //////////////////////////////
 // mixins
 //////////////////////////////
 
 @import oulu-mixins
 @import modules/web-fonts/font-awsome
-//@import modules/buttons/buttons
+@import modules/buttons/buttons
 
 //////////////////////////////
 // initializers
@@ -37,20 +42,13 @@
 // style
 //////////////////////////////
 
-<<<<<<< 26117e00fc982e9bff6c5fd14afab0aa08f2c7de:app/assets/stylesheets/application.sass
-=======
-@import bootstrap-import
-
-@import settings/helpers/**/*
-@import settings/custom-bootstrap/**/*
->>>>>>> ouluとbootstrapでmixinの名前がかぶってエラーが出てたので、ouluのボタンを読まないようにした:app/assets/stylesheets/application.css.sass
 @import base
 @import node_modules/highlight.js/styles/github
 @import github
 @import atoms/**/*
 @import blocks/**/*
 
-@import settings/custom-bootstrap/variables
 @import bootstrap/mixins
 @import bootstrap/close
 @import bootstrap/modal
+@import settings/custom-bootstrap/**/*
