--- a/app/assets/stylesheets/settings/custom-bootstrap/_mixins.scss
+++ b/app/assets/stylesheets/settings/custom-bootstrap/_mixins.scss
@@ -19,11 +19,11 @@
 @import "bootstrap/mixins/hover";
 @import "bootstrap/mixins/image";
 //@import "bootstrap/mixins/tag";
-@import "bootstrap/mixins/reset-filter";
+//@import "bootstrap/mixins/reset-filter";
 @import "bootstrap/mixins/resize";
 @import "bootstrap/mixins/screen-reader";
 @import "bootstrap/mixins/size";
-@import "bootstrap/mixins/tab-focus";
+//@import "bootstrap/mixins/tab-focus";
 @import "bootstrap/mixins/reset-text";
 @import "bootstrap/mixins/text-emphasis";
 @import "bootstrap/mixins/text-hide";
@@ -38,7 +38,7 @@
 @import "bootstrap/mixins/list-group";
 @import "bootstrap/mixins/nav-divider";
 @import "bootstrap/mixins/forms";
-@import "bootstrap/mixins/progress";
+//@import "bootstrap/mixins/progress";
 @import "bootstrap/mixins/table-row";
 
 // // Skins
