--- a/app/views/application/_global_nav.slim
+++ b/app/views/application/_global_nav.slim
@@ -20,7 +20,7 @@ nav.global-nav.js-show-mobile-nav__target
           .global-nav-links__link-label
             = t('reports')
       li.global-nav-links__item
-        = link_to reports_path, class: "global-nav-links__link #{current_link('/questions')}" do
+        = link_to questions_path, class: "global-nav-links__link #{current_link('/questions')}" do
           .global-nav-links__link-icon
             i.fa.fa-question
           .global-nav-links__link-label
