デザイン微調整

--- a/app/assets/stylesheets/blocks/_form.sass
+++ b/app/assets/stylesheets/blocks/_form.sass
@@ -15,11 +15,12 @@
     flex-direction: column
 .form-actions__item
   +padding(horizontal, .375rem)
+  width: 20rem
   +media-breakpoint-down(sm)
     width: 100%
     +padding(horizontal, 0)
     &:nth-child(2),
-    &:nth-child(3)    
+    &:nth-child(3)
       margin-top: .75rem
     > *
       width: 100%
